Use run-script to execute app